Fix #117015: Crash with subsurf mesh & loose edges in edit-mode

The result of bm_original_edge_get() was missing a null check,
all other callers check for null.